--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,21 +55,21 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'cc.trity.floatingactionbutton:library:1.0.0'
     implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
     implementation 'me.weyye.hipermission:library:1.0.7'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
     implementation 'com.annimon:stream:1.2.1'
-    implementation 'com.intuit.sdp:sdp-android:1.0.6'
-    implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation files('libs/reader.jar')
 
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+        annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+        implementation 'com.intuit.sdp:sdp-android:1.0.6'
+        implementation 'com.intuit.ssp:ssp-android:1.0.6'
+        implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+        implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
-    implementation 'info.hoang8f:android-segmented:1.0.6'
+        implementation 'info.hoang8f:android-segmented:1.0.6'
 
-    //CircleImageView
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
+//        //CircleImageView
+//        implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
