تعديل على توابع الارسال وصف ال SoketClient.java حيث تشمل التعدلات : تحويل Thread الاتصال ل Class واضافته ك inner Class ضمن ScoketClient وتهيئة توابع ضمنه (reConnect,KillSelf) تحويل ارسال ال data ضمن calss داخلي ضمن SoketClient اسمه SendDataThread وتهيئة توابع ضمنه (sendData,killSelf,notfyData) تحويل توابع ال connect وال reConnect لتابعين أحدهما privet للاتصال ضمن الclass بشروط معينة يجري التحقق منها قبل الاتصال  والثاني public لطلب الاتصال من خارج ال class

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+//        debug {
+//            debuggable true
+//            minifyEnabled false
+//            shrinkResources false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
     }
     sourceSets {
         main {
