--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,11 +74,15 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
     implementation 'info.hoang8f:android-segmented:1.0.6'
 
-//        //CircleImageView
-//        implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha6'
+
+    implementation 'org.java-websocket:Java-WebSocket:1.5.3'
+
 }
