--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     implementation 'org.java-websocket:Java-WebSocket:1.5.3'
 
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+
 }
